# GraphicsGemsCpp

./: CMakeLists.txt  CMakePresets.json  fakeirisgl.cpp  fakeirisgl.hpp  vcpkg.json
gemsiv/: CMakeLists.txt
gemsiv/arcball/: Ball.cpp  Ball.hpp  BallAux.cpp  BallMath.cpp  BallMath.hpp  Body.cpp  CMakeLists.txt  Demo.c  Demo.cpp
